--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -13,16 +13,18 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLength="50"
         android:padding="8dp"
         android:textColor="@color/primary_text"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/created"
-        android:padding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:padding="8dp"
         android:textColor="@color/secondary_text"
         android:textSize="12sp" />
 
