--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="88dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical">
 
@@ -22,30 +23,33 @@
 
         <TextView
             android:id="@+id/author"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/created"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/edited"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -54,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        app:fabSize="normal"
         android:layout_margin="16dp"
         android:src="@drawable/ic_edit_black_48dp" />
 
