--- a/app/src/main/res/layout/dialog_fragment_edit_note.xml
+++ b/app/src/main/res/layout/dialog_fragment_edit_note.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/in_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:padding="8dp">
 
         <android.support.design.widget.TextInputEditText
@@ -24,9 +25,10 @@
         android:id="@+id/fab_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/in_layout"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/in_layout"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_done_black_48dp" />
+        android:src="@drawable/ic_done_black_48dp"
+        app:fabSize="normal" />
 
 </RelativeLayout>
