--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/user_name"
             android:maxLength="20"
-            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="@color/primary_text"
             android:textSize="20sp" />
 
@@ -37,7 +37,7 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:maxLength="20"
-            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="@color/primary_text"
             android:textSize="20sp" />
 
