--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -29,7 +29,7 @@
             android:layout_weight="1"
             android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/created"
@@ -39,7 +39,7 @@
             android:layout_weight="1"
             android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/edited"
@@ -49,7 +49,7 @@
             android:layout_weight="1"
             android:paddingRight="8dp"
             android:textColor="@color/secondary_text"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -59,7 +59,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         app:fabSize="normal"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_edit_black_48dp" />
 
 </RelativeLayout>
