--- a/app/src/main/res/layout/fragment_notes_list.xml
+++ b/app/src/main/res/layout/fragment_notes_list.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:isScrollContainer="false"
         android:id="@+id/notes_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:isScrollContainer="false">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -19,8 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_add_black_48dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_note_add_white_48dp"
         app:fabSize="normal" />
 </RelativeLayout>
