--- a/app/src/main/res/layout-land/fragment_edit_notification.xml
+++ b/app/src/main/res/layout-land/fragment_edit_notification.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="50dp"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/TextView01"
@@ -44,7 +44,7 @@
             android:id="@+id/Button01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginRight="40dp"
             android:background="@color/primary_light"
             android:padding="12dp"
             android:text="@string/date_button"
