--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -10,11 +10,12 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/ic_image"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="8dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_note_black_48dp" />
+        android:layout_marginLeft="8dp"
+        android:src="@drawable/ic_notifications_active_black_48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,14 +26,23 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
             android:layout_margin="8dp"
+            android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/primary_text"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/created"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginRight="8dp"
+            android:textColor="@color/secondary_text"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
