--- a/app/src/main/res/layout/fragment_edit_notification.xml
+++ b/app/src/main/res/layout/fragment_edit_notification.xml
@@ -21,30 +21,32 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:id="@+id/date_and_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/in_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="50dp"
+        android:freezesText="true"
+        android:text="@string/date_text"
+        android:textColor="@color/primary_text"
+        android:textSize="30sp" />
+
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/in_layout"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_below="@id/date_and_time"
         android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/TextView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:text="@string/date_text"
-            android:textColor="@color/primary_text"
-            android:textSize="20sp"
-            android:typeface="sans" />
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/Button01"
+            android:id="@+id/pick_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginRight="12dp"
             android:background="@color/primary_light"
             android:padding="12dp"
             android:text="@string/date_button"
@@ -52,18 +54,8 @@
             android:textColor="@color/primary_text"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/TextView02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:text="@string/time_text"
-            android:textColor="@color/primary_text"
-            android:textSize="20sp"
-            android:typeface="sans" />
-
         <Button
-            android:id="@+id/Button02"
+            android:id="@+id/pick_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/primary_light"
