--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
     android:background="@color/primary_light"
-    android:elevation="1dp"
+    app:elevation="1dp"
     android:orientation="horizontal">
 
     <ImageView
