--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="@dimen/in_margin">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/name"
@@ -20,7 +20,7 @@
             android:maxLength="20"
             android:maxLines="1"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -28,7 +28,7 @@
         android:id="@+id/pass_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/in_margin"
         app:passwordToggleEnabled="true">
 
         <android.support.design.widget.TextInputEditText
@@ -40,14 +40,14 @@
             android:maxLength="20"
             android:maxLines="1"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
 
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin"
         android:gravity="right">
 
         <TextView
@@ -56,7 +56,7 @@
             android:layout_gravity="center_vertical"
             android:text="@string/remember_me"
             android:textColor="@color/secondary_text"
-            android:textSize="18sp" />
+            android:textSize="@dimen/secondary_size" />
 
         <CheckBox
             android:id="@+id/remember"
@@ -70,10 +70,10 @@
         android:id="@+id/action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_margin="@dimen/margin"
         android:background="@color/primary_light"
         android:textAllCaps="false"
         android:textColor="@color/primary_text"
-        android:textSize="20sp" />
+        android:textSize="@dimen/primary_size" />
 
 </LinearLayout>
