--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -9,22 +9,22 @@
         android:id="@+id/sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin"
         android:background="@color/primary_light"
         android:text="@string/sign_in"
         android:textAllCaps="false"
         android:textColor="@color/primary_text"
-        android:textSize="20sp" />
+        android:textSize="@dimen/primary_size" />
 
     <Button
         android:id="@+id/sign_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin"
         android:background="@color/primary_light"
         android:text="@string/sign_up"
         android:textAllCaps="false"
         android:textColor="@color/primary_text"
-        android:textSize="20sp" />
+        android:textSize="@dimen/primary_size" />
 
 </LinearLayout>
