--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -4,11 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.15"
+        android:src="@drawable/ic_note_black_48dp" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/in_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:layout_margin="@dimen/in_margin">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/text"
@@ -17,7 +23,7 @@
             android:hint="@string/note"
             android:maxLength="100"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -27,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/margin"
         android:src="@drawable/ic_done_white_48dp"
         app:fabSize="normal" />
 
