--- a/app/src/main/res/layout/fragment_edit_notification.xml
+++ b/app/src/main/res/layout/fragment_edit_notification.xml
@@ -4,11 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.15"
+        android:src="@drawable/ic_notifications_active_black_48dp" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/in_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_margin="@dimen/in_margin">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/text"
@@ -17,7 +23,7 @@
             android:hint="@string/notification"
             android:maxLength="100"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -27,12 +33,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/in_layout"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
         android:freezesText="true"
         android:text="@string/date_text"
         android:textColor="@color/primary_text"
-        android:textSize="30sp" />
+        android:textSize="@dimen/primary_size" />
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -46,24 +52,26 @@
             android:id="@+id/pick_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="@dimen/margin"
+            android:alpha="0.7"
             android:background="@color/primary_light"
-            android:padding="12dp"
+            android:padding="@dimen/padding"
             android:text="@string/date_button"
             android:textAllCaps="false"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
 
         <Button
             android:id="@+id/pick_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.7"
             android:background="@color/primary_light"
-            android:padding="12dp"
+            android:padding="@dimen/padding"
             android:text="@string/time_button"
             android:textAllCaps="false"
             android:textColor="@color/primary_text"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_size" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -72,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/margin"
         android:src="@drawable/ic_done_white_48dp"
         app:fabSize="normal" />
 
