--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
+    android:layout_height="@dimen/item_height"
+    android:layout_marginBottom="@dimen/item_margin"
+    android:layout_marginTop="@dimen/item_margin"
     android:background="@color/primary_light"
-    app:elevation="1dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    app:elevation="@dimen/elevation">
 
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="8dp"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/padding"
         android:src="@drawable/ic_note_black_48dp" />
 
     <LinearLayout
@@ -26,20 +26,20 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin"
             android:ellipsize="end"
-            android:layout_margin="8dp"
             android:maxLines="2"
             android:textColor="@color/primary_text"
-            android:textSize="18sp" />
+            android:textSize="@dimen/item_primary_size" />
 
         <TextView
             android:id="@+id/created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="@dimen/margin"
             android:textColor="@color/secondary_text"
-            android:textSize="12sp" />
+            android:textSize="@dimen/item_secondary_size" />
     </LinearLayout>
 
 </LinearLayout>
