--- a/app/src/main/res/layout/viewpager_fragment.xml
+++ b/app/src/main/res/layout/viewpager_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:background="@color/primary_light"
-        android:padding="8dp"
-        android:foregroundGravity="center" />
+        android:foregroundGravity="center"
+        android:padding="@dimen/padding" />
 
 </android.support.v4.view.ViewPager>
